# dlbaetem01_wetterstation

./: .gitmodules  README.md
cpu/: Cargo.toml
cpu/src/: contracts.rs  input_reader.rs  main.rs  plotter.rs  serializer.rs
documentation/: Wetterstation.fzz  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
mcu/: .gdbinit  .gitignore  CMakeLists.txt  Makefile  _gdbinit  libdaisy_import.cmake  platformio.ini  run.cpp  stm32h7_import.cmake
mcu/src/: run.cpp  wetterstation.cpp
wetter-rs/: Cargo.toml  debug.gdb  memory.x  wetter-rs.sublime-project  wetter-rs.sublime-workspace
wetter-rs/.cargo/: config.toml
wetter-rs/.zed/: debug.json
wetter-rs/src/: main.rs
