[package]
name = "cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serialport = "4.3.0"
plotters = "0.3.5"
# gtk = { package = "gtk4", version = "0.6"}